--- a/iconic/templates/Iconic_Settings.twig
+++ b/iconic/templates/Iconic_Settings.twig
@@ -4,9 +4,9 @@
  *
  * Iconic Settings.twig
  *
- * @author    Nicholas O'Donnell
- * @copyright Copyright (c) 2016 Nicholas O'Donnell
- * @link      http://nicholasodo.com
+ * @author    Piccirilli Dorsey, Inc. (Nicholas O'Donnell)
+ * @copyright Copyright (c) 2016 Piccirilli Dorsey, Inc. (Nicholas O'Donnell)
+ * @link      http://picdorsey.com
  * @package   Iconic
  * @since     1.0.2
  */
